--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>my_links</title>
+    <title>my_links.net</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="icon" href="src/pics/favicon.ico" type="image/x-icon">
 </head>
