--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my_links</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="icon" href="src/pics/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <div class="banner">
