--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
     </div>
     <h1 style="text-align: center;">The Worlds Best Site For .onion Links!</h1>
     <hr>
-    <h1 style="text-align: center; font-size: 50px;">Links:</h1>
-    <h1 style="font-size: 40px;">Drug Stores</h2>
-    <h2>1. <a href="http://sga5n7zx6qjty7uwvkxpwstyoh73shst6mx3okouv53uks7ks47msayd.onion/">DeDope</a></h3>
-    <h2>2. <a href="http://rfyb5tlhiqtiavwhikdlvb3fumxgqwtg2naanxtiqibidqlox5vispqd.onion/">Tom and Jerry Store</a></h3>
-    <h2>3. <a href="http://ajlu6mrc7lwulwakojrgvvtarotvkvxqosb4psxljgobjhureve4kdqd.onion/">420prime</a></h3>
-    <h2>4. <a href="http://usmost4cbpesx552s2s4ti3c4nk2xgiu763vhcs3b4uc4ppp3zwnscyd.onion/">NLGrowers</a></h3>
+    <h1 style="text-align: center; font-size: 80px;">Links:</h1>
+    <h1 style="text-align: center; font-size: 40px;">Drug Stores</h2>
+    <h2 style="text-align: center;">1. <a href="http://sga5n7zx6qjty7uwvkxpwstyoh73shst6mx3okouv53uks7ks47msayd.onion/">DeDope</a></h3>
+    <h2 style="text-align: center;">2. <a href="http://rfyb5tlhiqtiavwhikdlvb3fumxgqwtg2naanxtiqibidqlox5vispqd.onion/">Tom and Jerry Store</a></h3>
+    <h2 style="text-align: center;">3. <a href="http://ajlu6mrc7lwulwakojrgvvtarotvkvxqosb4psxljgobjhureve4kdqd.onion/">420prime</a></h3>
+    <h2 style="text-align: center;">4. <a href="http://usmost4cbpesx552s2s4ti3c4nk2xgiu763vhcs3b4uc4ppp3zwnscyd.onion/">NLGrowers</a></h3>
 
     <br>
 
-    <h1 style="font-size: 40px;">Bitcoin Anonymity</h1>
-    <h2>1. <a href="http://hqfld5smkr4b4xrjcco7zotvoqhuuoehjdvoin755iytmpk4sm7cbwad.onion/">Mixabait</a></h2>
-    <h2>2. <a href="http://mp3fpv6xbrwka4skqliiifoizghfbjy5uyu77wwnfruwub5s4hly2oid.onion/">EasyCoin</a></h2>
-    <h2>3. <a href="http://p2qzxkca42e3wccvqgby7jrcbzlf6g7pnkvybnau4szl5ykdydzmvbid.onion/">OnionWallet</a></h2>
-    <h2>4. <a href="http://ovai7wvp4yj6jl3wbzihypbq657vpape7lggrlah4pl34utwjrpetwid.onion/">VirginBitcoins</a></h2>
+    <h1 style="text-align: center; font-size: 40px;">Bitcoin Anonymity</h1>
+    <h2 style="text-align: center;">1. <a href="http://hqfld5smkr4b4xrjcco7zotvoqhuuoehjdvoin755iytmpk4sm7cbwad.onion/">Mixabait</a></h2>
+    <h2 style="text-align: center;">2. <a href="http://mp3fpv6xbrwka4skqliiifoizghfbjy5uyu77wwnfruwub5s4hly2oid.onion/">EasyCoin</a></h2>
+    <h2 style="text-align: center;">3. <a href="http://p2qzxkca42e3wccvqgby7jrcbzlf6g7pnkvybnau4szl5ykdydzmvbid.onion/">OnionWallet</a></h2>
+    <h2 style="text-align: center;">4. <a href="http://ovai7wvp4yj6jl3wbzihypbq657vpape7lggrlah4pl34utwjrpetwid.onion/">VirginBitcoins</a></h2>
 </body>
 </html>
