--- a/index.html
+++ b/index.html
@@ -19,12 +19,21 @@
     <h2 style="text-align: center;">3. <a href="http://ajlu6mrc7lwulwakojrgvvtarotvkvxqosb4psxljgobjhureve4kdqd.onion/">420prime</a></h3>
     <h2 style="text-align: center;">4. <a href="http://usmost4cbpesx552s2s4ti3c4nk2xgiu763vhcs3b4uc4ppp3zwnscyd.onion/">NLGrowers</a></h3>
 
-    <br>
+    <hr>
 
     <h1 style="text-align: center; font-size: 40px;">Bitcoin Anonymity</h1>
     <h2 style="text-align: center;">1. <a href="http://hqfld5smkr4b4xrjcco7zotvoqhuuoehjdvoin755iytmpk4sm7cbwad.onion/">Mixabait</a></h2>
     <h2 style="text-align: center;">2. <a href="http://mp3fpv6xbrwka4skqliiifoizghfbjy5uyu77wwnfruwub5s4hly2oid.onion/">EasyCoin</a></h2>
     <h2 style="text-align: center;">3. <a href="http://p2qzxkca42e3wccvqgby7jrcbzlf6g7pnkvybnau4szl5ykdydzmvbid.onion/">OnionWallet</a></h2>
     <h2 style="text-align: center;">4. <a href="http://ovai7wvp4yj6jl3wbzihypbq657vpape7lggrlah4pl34utwjrpetwid.onion/">VirginBitcoins</a></h2>
+
+    <hr>
+
+    <h1 style="text-align: center; font-size: 40px;">Commercial Stores</h1>
+    <h2 style="text-align: center;">1. <a href="http://55niksbd22qqaedkw36qw4cpofmbxdtbwonxam7ov2ga62zqbhgty3yd.onion/">AccMarket</a></h2>
+    <h2 style="text-align: center;">2. <a href="http://s57divisqlcjtsyutxjz2ww77vlbwpxgodtijcsrgsuts4js5hnxkhqd.onion/">CardShop</a></h2>
+    <h2 style="text-align: center;">3. <a href="http://rxmyl3izgquew65nicavsk6loyyblztng6puq42firpvbe32sefvnbad.onion/">Mobile Store</a></h2>
+    <h2 style="text-align: center;">4. <a href="http://ymvhtqya23wqpez63gyc3ke4svju3mqsby2awnhd3bk2e65izt7baqad.onion/">Onion Identity Services</a></h2>
+
 </body>
 </html>
