--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my_links</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <!--
+  , ; ,   .-'"""'-.   , ; ,
+  \\|/  .'         '.  \|//
+   \-;-/   ()   ()   \-;-/
+   // ;               ; \\
+  //__; :.         .; ;__\\
+ `-----\'.'-.....-'.'/-----'
+        '.'.-.-,_.'.'
+          '(  (..-'      I DIDNT KNOW YOUR A SKID!
+            '-'
+    -->
 </head>
 <body>
     <div class="banner">
